--- a/app/src/main/res/layout/activity_questions_.xml
+++ b/app/src/main/res/layout/activity_questions_.xml
@@ -11,9 +11,9 @@
         android:id="@+id/Question5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="23dp"
+        android:onClick="nextActivity"
         android:text="5"
-        app:layout_constraintBottom_toTopOf="@+id/Question10"
         app:layout_constraintStart_toStartOf="@+id/Question3"
         app:layout_constraintTop_toBottomOf="@+id/Question3" />
 
@@ -21,9 +21,9 @@
         android:id="@+id/Question10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="34dp"
+        android:layout_marginTop="42dp"
+        android:onClick="nextActivity"
         android:text="10"
-        app:layout_constraintBottom_toTopOf="@+id/Question15"
         app:layout_constraintStart_toStartOf="@+id/Question5"
         app:layout_constraintTop_toBottomOf="@+id/Question5" />
 
@@ -31,9 +31,9 @@
         android:id="@+id/Question15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="106dp"
+        android:layout_marginTop="44dp"
+        android:onClick="nextActivity"
         android:text="15"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/Question10"
         app:layout_constraintTop_toBottomOf="@+id/Question10" />
 
@@ -41,24 +41,24 @@
         android:id="@+id/Question3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
-        android:layout_marginLeft="31dp"
-        android:layout_marginStart="31dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="30dp"
+        android:onClick="nextActivity"
         android:text="3"
-        app:layout_constraintBottom_toTopOf="@+id/Question5"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintStart_toStartOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="164dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="21dp"
-        android:layout_marginTop="41dp"
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="116dp"
+        android:layout_marginRight="116dp"
+        android:layout_marginTop="49dp"
         android:text="Number of Questions"
-        app:layout_constraintBottom_toTopOf="@+id/Question3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
