--- a/app/src/main/res/layout/activity_timeper_q.xml
+++ b/app/src/main/res/layout/activity_timeper_q.xml
@@ -9,15 +9,15 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="145dp"
+        android:layout_width="219dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="26dp"
-        android:layout_marginEnd="109dp"
-        android:layout_marginRight="109dp"
-        android:layout_marginTop="58dp"
+        android:layout_marginBottom="23dp"
+        android:layout_marginTop="61dp"
         android:text="Time per Question"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -25,11 +25,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="26dp"
-        android:layout_marginLeft="18dp"
-        android:layout_marginStart="18dp"
         android:text="3 Sec"
         app:layout_constraintBottom_toTopOf="@+id/button3"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
