--- a/app/src/main/res/layout/activity_questions_.xml
+++ b/app/src/main/res/layout/activity_questions_.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,58 +7,74 @@
     tools:context=".Questions_Activity"
     tools:layout_editor_absoluteY="81dp">
 
-    <Button
-        android:id="@+id/Question5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
-        android:onClick="nextActivity"
-        android:text="5"
-        app:layout_constraintStart_toStartOf="@+id/Question3"
-        app:layout_constraintTop_toBottomOf="@+id/Question3" />
-
-    <Button
-        android:id="@+id/Question10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
-        android:onClick="nextActivity"
-        android:text="10"
-        app:layout_constraintStart_toStartOf="@+id/Question5"
-        app:layout_constraintTop_toBottomOf="@+id/Question5" />
-
-    <Button
-        android:id="@+id/Question15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:onClick="nextActivity"
-        android:text="15"
-        app:layout_constraintStart_toStartOf="@+id/Question10"
-        app:layout_constraintTop_toBottomOf="@+id/Question10" />
-
-    <Button
-        android:id="@+id/Question3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="30dp"
-        android:onClick="nextActivity"
-        android:text="3"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="116dp"
-        android:layout_marginRight="116dp"
-        android:layout_marginTop="49dp"
+        android:layout_height="42dp"
+        //android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        //android:layout_marginStart="97dp"
         android:text="Number of Questions"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="136dp"
+        tools:layout_editor_absoluteY="49dp" />
 
-</android.support.constraint.ConstraintLayout>
+    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/radioGroup"
+        android:layout_width="384dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="103dp"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints,RtlCompat"
+        tools:layout_editor_absoluteX="161dp"
+        tools:layout_editor_absoluteY="165dp">
+
+        <RadioButton
+            android:id="@+id/radioButton5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="1dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="62dp"
+            android:onClick="nextActivity"
+            android:text="3"
+            app:layout_constraintStart_toStartOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+        <RadioButton
+            android:id="@+id/radioButton6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="44dp"
+            android:onClick="nextActivity"
+            android:text="5"
+            app:layout_constraintStart_toStartOf="@+id/radioButton5"
+            app:layout_constraintTop_toBottomOf="@+id/radioButton5" />
+
+        <RadioButton
+            android:id="@+id/radioButton7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="47dp"
+            android:onClick="nextActivity"
+            android:text="10"
+            app:layout_constraintStart_toStartOf="@+id/radioButton6"
+            app:layout_constraintTop_toBottomOf="@+id/radioButton6" />
+
+        <RadioButton
+            android:id="@+id/radioButton8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="1dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="50dp"
+            android:onClick="nextActivity"
+            android:text="15"
+            app:layout_constraintStart_toStartOf="@+id/radioButton7"
+            app:layout_constraintTop_toBottomOf="@+id/radioButton7" />
+    </RadioGroup>
+
+</android.widget.RelativeLayout>
