--- a/app/src/main/res/layout/activity_questions_.xml
+++ b/app/src/main/res/layout/activity_questions_.xml
@@ -12,9 +12,10 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="42dp"
-        //android:layout_alignParentStart="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        //android:layout_marginStart="97dp"
+        android:layout_marginStart="94dp"
+        android:layout_marginTop="40dp"
         android:text="Number of Questions"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="136dp"
@@ -26,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="103dp"
+        android:layout_marginTop="109dp"
         android:orientation="vertical"
         tools:ignore="MissingConstraints,RtlCompat"
         tools:layout_editor_absoluteX="161dp"
