--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -4,15 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".letsGo">
+    tools:context=".Score">
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="395dp"
-        android:layout_height="678dp"
-        android:onClick="nextActivity"
-        android:text="Lets Go!!"
-        android:textSize="100sp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp" />
 </android.widget.RelativeLayout>
