--- a/app/src/main/res/layout/activity_correct.xml
+++ b/app/src/main/res/layout/activity_correct.xml
@@ -4,17 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".areyouReady">
+    tools:context=".correct">
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="395dp"
-        android:layout_height="678dp"
-        android:onClick="nextActivity"
-        android:text="Are You Ready?"
-        android:textSize="100sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/button5"
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        android:background="#49f909"
+        tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp" />
 </android.widget.RelativeLayout>
