--- a/app/src/main/res/layout/activity_correct.xml
+++ b/app/src/main/res/layout/activity_correct.xml
@@ -8,9 +8,12 @@
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:background="#49f909"
+        android:onClick="nextActivity"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp" />
 </android.widget.RelativeLayout>
