--- a/app/src/main/res/layout/activity_questions_.xml
+++ b/app/src/main/res/layout/activity_questions_.xml
@@ -12,11 +12,13 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="42dp"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="94dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
+        android:fontFamily="casual"
         android:text="Number of Questions"
+        android:textSize="20sp"
+        android:textStyle="bold"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="136dp"
         tools:layout_editor_absoluteY="49dp" />
@@ -25,11 +27,11 @@
         android:id="@+id/radioGroup"
         android:layout_width="384dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="146dp"
-        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="65dp"
         android:gravity="center"
+        android:orientation="vertical"
         tools:ignore="MissingConstraints,RtlCompat"
         tools:layout_editor_absoluteX="161dp"
         tools:layout_editor_absoluteY="165dp">
