--- a/app/src/main/res/layout/activity_time_.xml
+++ b/app/src/main/res/layout/activity_time_.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,21 +9,27 @@
 
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/radioGroup1"
-        android:layout_width="384dp"
+        android:layout_width="0dp"
         android:layout_height="201dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="106dp"
-        android:orientation="vertical"
-        tools:ignore="MissingConstraints"
+        android:layout_marginBottom="136dp"
+        android:layout_marginTop="66dp"
         android:gravity="center"
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="165dp">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.736"
+        tools:ignore="MissingConstraints">
 
         <RadioButton
             android:id="@+id/radioButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:baselineAligned="false"
             android:onClick="nextActivity"
             android:text="3 Sec"
             tools:ignore="MissingConstraints"
@@ -67,10 +73,12 @@
         android:layout_height="216dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
+        android:layout_marginEnd="101dp"
+        android:layout_marginRight="101dp"
+        android:layout_marginTop="93dp"
         android:text="Time per Question"
-        tools:ignore="MissingConstraints,NotSibling"
-        tools:layout_editor_absoluteX="125dp"
-        tools:layout_editor_absoluteY="77dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints,NotSibling" />
 
-</android.widget.RelativeLayout>
+</android.support.constraint.ConstraintLayout>
