--- a/app/src/main/res/layout/activity_lets_go.xml
+++ b/app/src/main/res/layout/activity_lets_go.xml
@@ -8,11 +8,14 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="395dp"
-        android:layout_height="678dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#C70039"
+        android:fontFamily="casual"
         android:onClick="nextActivity"
         android:text="Lets Go!!"
         android:textSize="100sp"
+        android:textStyle="bold"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp" />
 </android.widget.RelativeLayout>
