--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
+    android:background="#2DF8F3"
     tools:context=".MainActivity"
     tools:layout_editor_absoluteY="81dp">
 
@@ -20,7 +20,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="200dp"
-        android:background="#fdfdfd"
+        android:background="#2DF8F3"
         android:fontFamily="casual"
         android:text="Geography"
         android:textSize="18sp"
@@ -110,10 +110,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginEnd="44dp"
-        android:layout_marginRight="44dp"
-        android:layout_marginTop="52dp"
-        android:background="#ffffff"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="36dp"
+        android:background="#ffffffff"
         android:onClick="nextActivity"
         android:text="Next"
         app:layout_constraintEnd_toEndOf="parent"
@@ -132,9 +132,11 @@
         android:fontFamily="casual"
         android:text="Genres"
         android:textSize="40sp"
-        android:textStyle="bold|italic"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/citiesSwitch"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.576"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.534" />
 </android.support.constraint.ConstraintLayout>
