--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F5DD7E"
     tools:context=".Questions"
     tools:layout_editor_absoluteY="81dp">
 
@@ -20,6 +21,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:fontFamily="casual"
         app:layout_constraintBottom_toTopOf="@+id/radioButton9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,8 +43,10 @@
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/radioButton10"
         android:layout_marginBottom="48dp"
+        android:fontFamily="casual"
         android:onClick="nextActivity"
         android:text="RadioButton"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/radioButton10"
         app:layout_constraintStart_toStartOf="@+id/radioButton10"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -54,8 +58,10 @@
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/radioButton11"
         android:layout_marginBottom="37dp"
+        android:fontFamily="casual"
         android:onClick="nextActivity"
         android:text="RadioButton"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/radioButton11"
         app:layout_constraintStart_toStartOf="@+id/radioButton11"
         app:layout_constraintTop_toBottomOf="@+id/radioButton9" />
@@ -67,8 +73,10 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="27dp"
+        android:fontFamily="casual"
         android:onClick="nextActivity"
         android:text="RadioButton"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/radioButton12"
         app:layout_constraintStart_toStartOf="@+id/radioButton12"
         app:layout_constraintTop_toBottomOf="@+id/radioButton10" />
@@ -82,8 +90,10 @@
         android:layout_marginBottom="110dp"
         android:layout_marginLeft="122dp"
         android:layout_marginStart="122dp"
+        android:fontFamily="casual"
         android:onClick="nextActivity"
         android:text="RadioButton"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioButton11" />
