--- a/app/src/main/res/layout/activity_questions_.xml
+++ b/app/src/main/res/layout/activity_questions_.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#B28BFF"
     tools:context=".Questions_Activity"
     tools:layout_editor_absoluteY="81dp">
 
@@ -14,10 +15,10 @@
         android:layout_height="42dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="105dp"
         android:fontFamily="casual"
         android:text="Number of Questions"
-        android:textSize="20sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="136dp"
@@ -25,11 +26,11 @@
 
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/radioGroup"
-        android:layout_width="384dp"
-        android:layout_height="wrap_content"
+        android:layout_width="393dp"
+        android:layout_height="367dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="65dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="125dp"
         android:gravity="center"
         android:orientation="vertical"
         tools:ignore="MissingConstraints,RtlCompat"
@@ -45,6 +46,7 @@
             android:layout_marginTop="62dp"
             android:onClick="nextActivity"
             android:text="3"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/textView3"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
@@ -55,6 +57,7 @@
             android:layout_marginTop="44dp"
             android:onClick="nextActivity"
             android:text="5"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/radioButton5"
             app:layout_constraintTop_toBottomOf="@+id/radioButton5" />
 
@@ -65,6 +68,7 @@
             android:layout_marginTop="47dp"
             android:onClick="nextActivity"
             android:text="10"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/radioButton6"
             app:layout_constraintTop_toBottomOf="@+id/radioButton6" />
 
@@ -77,6 +81,7 @@
             android:layout_marginTop="50dp"
             android:onClick="nextActivity"
             android:text="15"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/radioButton7"
             app:layout_constraintTop_toBottomOf="@+id/radioButton7" />
     </RadioGroup>
