--- a/app/src/main/res/layout/activity_wrong.xml
+++ b/app/src/main/res/layout/activity_wrong.xml
@@ -14,6 +14,7 @@
         android:layout_alignParentTop="true"
         android:background="#f90000"
         android:onClick="nextActivity"
+        android:textSize="40sp"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp" />
 </android.widget.RelativeLayout>
